--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
     <h1>Welcome to Web Coin Market</h1>
     <nav>
         <ul>
-            <li><a href="/login">Sign In</a></li>
+            <li><a href="/login">Log In</a></li>
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/balance">Balance</a></li>
             <li><a href="/market">Market</a></li>
