login, balance 수정

--- a/templates/balance.html
+++ b/templates/balance.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Balance</h1>
-    <h2>Your Account Balance: {{ balance }}</h2>
+    <h2>Your Account Balance: {{ balance }} won</h2>
     <h2>Your Number of Coins: {{ coins }}</h2>
     <form method="POST" action="/add_money">
         <label for="amount">Amount to Add:</label>
