--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Sign In</title>
+    <title>Log In</title>
 </head>
+
 <body>
-    <h1>Sign In</h1>
-    <form method="POST" action="/signin">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <input type="submit" value="Sign In">
+    <h1>Log In</h1>
+    <form action="/login" method="post">
+        <input type="text" name="username" placeholder="Username">
+        <input type="password" name="password" placeholder="Password">
+        <input type="submit" value="Login">
     </form>
+
 </body>
+
 </html>
