--- a/templates/market.html
+++ b/templates/market.html
@@ -16,9 +16,15 @@
         <input type="number" id="selling_price" name="selling_price" required>
         <br>
         <input type="submit" value="Sell Coins">
+        
     </form>
     <h2>Buy Coins</h2>
     <form method="POST" action="/buy_coins">
         <label for="number_of_coins">Number of Coins:</label>
         <input type="number" id="number_of_coins" name="number_of_coins" required>
-        <
+        <br>
+        <input type="submit" value="Buy Coins">
+    </form>
+</body>
+</html>
+        
