--- a/templates/main.html
+++ b/templates/main.html
@@ -57,6 +57,7 @@
                 <a href="/balance">Balance</a>
                 <a href="/market">Market</a>
                 <a href="/trend">Trend</a>
+                <a href="/history">History</a>
             </nav>
             <nav class="links top-right">
                 {% if 'username' in session %}
