--- a/templates/balance.html
+++ b/templates/balance.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Balance</title>
     <style>
@@ -7,10 +8,13 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
+            background-color: #F8F8F8;
         }
 
-        h1, h2 {
+        h1,
+        h2 {
             margin: 0;
+            color: #333;
         }
 
         .balance-container {
@@ -30,34 +34,46 @@
         form label {
             display: block;
             margin-bottom: 10px;
+            color: #666;
         }
 
         form input[type="number"] {
             width: 200px;
-            padding: 5px;
-            border: 1px solid #ccc;
+            padding: 10px;
+            border: 1px solid #DDD;
             border-radius: 4px;
+            margin-bottom: 10px;
         }
 
         form input[type="submit"] {
-            padding: 5px 15px;
-            background-color: #4caf50;
-            color: white;
+            padding: 10px 20px;
+            background-color: #6DB5A1;
+            color: #FFF;
             border: none;
             border-radius: 4px;
             cursor: pointer;
         }
 
         form input[type="submit"]:hover {
-            background-color: #45a049;
+            background-color: #5A997F;
         }
 
         .main-link {
             text-align: center;
             margin-top: 30px;
         }
+
+        .main-link a {
+            color: #333;
+            text-decoration: none;
+        }
+
+        .main-link a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
+
 <body>
     <div class="balance-container">
         <h1>Balance</h1>
@@ -65,23 +81,24 @@
         <h2>Your Account Balance: {{ balance }} won</h2>
         <h2>Your Number of Coins: {{ coins }}</h2>
     </div>
-    
+
     <form method="POST" action="/add_money">
         <label for="add-amount">Amount to Add:</label>
         <input type="number" id="add-amount" name="amount" required>
         <br>
         <input type="submit" value="Add Money">
     </form>
-    
+
     <form method="POST" action="/withdraw_money">
         <label for="withdraw-amount">Amount to Withdraw:</label>
         <input type="number" id="withdraw-amount" name="amount" required>
         <br>
         <input type="submit" value="Withdraw Money">
     </form>
-    
+
     <div class="main-link">
         <a href="/">Back to Main</a>
     </div>
 </body>
+
 </html>
